solve compatibility of java8 and later jdk(modules)