@@ -7,6 +7,8 @@ import java.nio.ByteBuffer;
  * -Xmx256 -XX:MaxDirectMemorySize=100M -Dsun.nio.MaxDirectMemorySize=50000000<br>
  * or -Xmx256<br>
  * NOTE: 指定-Dsun.nio.MaxDirectMemorySize没有其作用
+ *
+ * java9+访问jdk.internal.misc.VM需要指定 --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
  * 
  * @author liumengjun
  *
@@ -15,7 +17,8 @@ public class MaxDirectMemorySize {
 
 	public static void main(String[] args) throws ClassNotFoundException, NoSuchFieldException, SecurityException,
 	        IllegalArgumentException, IllegalAccessException {
-		System.out.println("maxDirectMemory:" + sun.misc.VM.maxDirectMemory());
+//		System.out.println("maxDirectMemory:" + sun.misc.VM.maxDirectMemory());  // in java8
+//		System.out.println("maxDirectMemory:" + jdk.internal.misc.VM.maxDirectMemory());  // not in java8
 
 		System.out.println("================================");
 
